--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
         <div class="title">This website is awesome</div>
         <div class="sub-text">This website has some subtext that goes here, under the main title. It's a smaller font and the color is lower contrast.</div>
         <button class="sign-up">Sign Up</button>
-        <img src="img_girl.jpg" alt="We will have to wait and see" width="800" height="500">
+        <img src="lp-images/deer.jpg" alt="A friend" width="350px" height="auto">
     </div>
     <div class="body-2">
-        <div class="title-2">Some Random Information</div>
-
+        <div class="title-2">I want to move here!</div>
+        <div class="info">
+            <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="100px" height="100px">
+            <div class="st1">Some beautiful imagery of Colorado. Pretty nice, heh?!</div>
+            <img src="lp-images/c2.jpg" alt="Oooo, thats pretty" width="100px" height="100px">
+            <div class="st2">Ooooooo, baby! I'm about to get all up in that nature!</div>
+            <img src="lp-images/c3.jpg" alt="Colorado is nice" width="100px" height="100px">
+            <div class="st3">Everybody who seen the beautiful pictures of Colorado say, "Yaaaaaaaaa".</div>
+            <img src="lp-images/c4.jpg" alt="scenery" width="100px" height="100px">
+            <div class="st4">I can't be the only one who isn't DTM(down to move) after seeing these, right??</div>
+        </div>
     </div>
     <div class="body-3">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="sig">- Thor, God of Thunder</div>
     </div>
     <div class="body-4">
         <div class="box-4">
