--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
 </head>
 <body>
     <header>
@@ -16,22 +17,34 @@
         </div>
     </header>
     <div class="body-1">
-        <div class="title">This website is awesome</div>
-        <div class="sub-text">This website has some subtext that goes here, under the main title. It's a smaller font and the color is lower contrast.</div>
-        <button class="sign-up">Sign Up</button>
-        <img src="lp-images/deer.jpg" alt="A friend" width="350px" height="auto">
+        <div class="left-side-1">
+            <div class="title">This website is awesome</div>
+            <div class="sub-text">This website has some subtext that goes here, under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button class="sign-up">Sign Up</button>
+        </div>
+        <div class="right-side-1">
+            <img src="lp-images/deer.jpg" alt="A friend" width="350px" height="auto">
+        </div>
     </div>
     <div class="body-2">
         <div class="title-2">I want to move here!</div>
         <div class="info">
-            <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="100px" height="100px">
-            <div class="st1">Some beautiful imagery of Colorado. Pretty nice, heh?!</div>
-            <img src="lp-images/c2.jpg" alt="Oooo, thats pretty" width="100px" height="100px">
-            <div class="st2">Ooooooo, baby! I'm about to get all up in that nature!</div>
-            <img src="lp-images/c3.jpg" alt="Colorado is nice" width="100px" height="100px">
-            <div class="st3">Everybody who seen the beautiful pictures of Colorado say, "Yaaaaaaaaa".</div>
-            <img src="lp-images/c4.jpg" alt="scenery" width="100px" height="100px">
-            <div class="st4">I can't be the only one who isn't DTM(down to move) after seeing these, right??</div>
+            <div class="info-sub">
+                <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="100px" height="100px">
+                <div class="st1">Some beautiful imagery of Colorado. Pretty nice, heh?!</div>
+            </div>
+            <div class="info-sub">
+                <img src="lp-images/c2.jpg" alt="Oooo, thats pretty" width="100px" height="100px">
+                <div class="st2">Ooooooo, baby! I'm about to get all up in that nature!</div>
+            </div>
+            <div class="info-sub">
+                <img src="lp-images/c3.jpg" alt="Colorado is nice" width="100px" height="100px">
+                <div class="st3">Everybody who seen the beautiful pictures of Colorado say, "Yaaaaaaaaa".</div>
+            </div>
+            <div class="info-sub">
+                <img src="lp-images/c4.jpg" alt="scenery" width="100px" height="100px">
+                <div class="st4">I can't be the only one who isn't DTM(down to move) after seeing these, right??</div>
+            </div>
         </div>
     </div>
     <div class="body-3">
