--- a/index.html
+++ b/index.html
@@ -28,18 +28,23 @@
     </div>
     <div class="body-2">
         <div class="title-2">I want to move here!</div>
-        <div class="info">
-            <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="100px" height="100px">
-            <div class="st1">Some beautiful imagery of Colorado. Pretty nice, heh?!</div>
-
-            <img src="lp-images/c2.jpg" alt="Oooo, thats pretty" width="100px" height="100px">
-            <div class="st2">Ooooooo, baby! I'm about to get all up in that nature!</div>
-
-            <img src="lp-images/c3.jpg" alt="Colorado is nice" width="100px" height="100px">
-            <div class="st3">Everybody who seen the beautiful pictures of Colorado say, "Yaaaaaaaaa".</div>
-
-            <img src="lp-images/c4.jpg" alt="scenery" width="100px" height="100px">
-            <div class="st4">I can't be the only one who isn't DTM(down to move) after seeing these, right??</div>
+        <div class="info-con">
+            <div class="info">
+                <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="150px" height="150px">
+                <div class="st1">Some beautiful imagery of Colorado. Pretty nice, heh?!</div>
+            </div>
+            <div class="info">
+                <img src="lp-images/c2.jpg" alt="Oooo, thats pretty" width="150px" height="150px">
+                <div class="st2">Ooooooo, baby! I'm about to get all up in that nature!</div>
+            </div>
+            <div class="info">
+                <img src="lp-images/c3.jpg" alt="Colorado is nice" width="150px" height="150px">
+                <div class="st3">Everybody who seen the beautiful pictures of Colorado say, "Yaaaaaaaaa".</div>
+            </div>
+            <div class="info">
+                <img src="lp-images/c4.jpg" alt="scenery" width="150px" height="150px">
+                <div class="st4">I can't be the only one who isn't DTM(down to move) after seeing these, right??</div>
+            </div>
         </div>
     </div>
     <div class="body-3">
@@ -47,10 +52,14 @@
         <div class="sig">- Thor, God of Thunder</div>
     </div>
     <div class="body-4">
-        <div class="box-4">
-            <div class="call">Call to action! It's time!</div>
-            <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
-            <button class="sign-up-2">Sign Up</button>
+        <div class="container-4">
+            <div class="left-box-4">
+                <div class="call">Call to action! It's time!</div>
+                <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="right-box-4">
+                <button class="sign-up-2">Sign Up</button>
+            </div>
         </div>
     </div>
     <footer>
