Finished formatting 'body-2

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         </div>
     </header>
     <div class="body-1">
-        <div class="left-side-1">
-            <div class="title">This website is awesome</div>
-            <div class="sub-text">This website has some subtext that goes here, under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button class="sign-up">Sign Up</button>
-        </div>
-        <div class="right-side-1">
-            <img src="lp-images/deer.jpg" alt="A friend" width="350px" height="auto">
+        <div class="container-1">
+            <div class="left-side-1">
+                <div class="title">This website is awesome!</div>
+                <div class="sub-text">This website has some subtext that goes here, under the main title. It's a smaller font and the color is lower contrast. I bet this is going to look pretty tight!</div>
+                <button class="sign-up">Sign Up</button>
+            </div>
+            <div class="right-side-1">
+                <img src="lp-images/deer.jpg" alt="A friend" width="500px" height="auto">
+            </div>
         </div>
     </div>
     <div class="body-2">
-        <div class="title-2">I want to move here!</div>
+        <div class="title-2">Colorado, the land of desktop backgrounds</div>
         <div class="info-con">
             <div class="info">
                 <img src="lp-images/c1.jpg" alt="oh hot damn, thats nice" width="150px" height="150px">
