Finished the header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="logo">Header Logo</div>
-        <div class="header-links">
-            <a href="link-one">Header Link One</a>
-            <a href="link-two">Header Link Two</a>
-            <a href="link-three">Header Link Three</a>
+        <div class="header-con">
+            <div class="logo-con">
+                <div class="logo">Header Logo</div>
+            </div>
+            <div class="header-links">
+                <a href="link-one">Header Link One</a>
+                <a href="link-two">Header Link Two</a>
+                <a href="link-three">Header Link Three</a>
+            </div>
         </div>
     </header>
     <div class="body-1">
