--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <footer>
-        <div>Copyright. The Odin Project 2022</div>
+        <div>Copyright &copy; The Odin Project 2022</div>
     </footer>
 </body>
 </html>
